hphp/hack/test/typecheck/function_default_multiple.php.exp
ERROR: File "function_default_multiple.php", line 3, characters 29-31:
A previous parameter has a default value.
Remove all the default values for the preceding parameters,
or add a default value to this one. (Typing[4077])
ERROR: File "function_default_multiple.php", line 3, characters 51-53:
A previous parameter has a default value.
Remove all the default values for the preceding parameters,
or add a default value to this one. (Typing[4077])
