hphp/hack/test/typecheck/function_default_multiple.php
<?hh

function f(int $x1 = 1, int $x2, int $x3 = 3, int $x4, int $x5): void {}
